src/test/ui/issues/issue-3668.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-3668.rs:8:34
   |
LL |        static childVal: Box<P> = self.child.get();
   |                                  ^^^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
